add a sample of admin library management page and some simple logic for it.